[package]
name = "tarkov-map"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ron = "0.12"
indicatif = "0.18.3"
clap = { version = "4.5.54", features = ["derive"] }
