[package]
name = "tarkov-map"
version = "0.1.4"
edition = "2024"
license = "MIT"
default-run = "tarkov-map"

[dependencies]
base64 = "0.22.1"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg", "image"] }
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ron = "0.12"
rust-embed = { version = "8.9.0", features = ["compression"] }
indicatif = "0.18.3"
clap = { version = "4.5.54", features = ["derive"] }
resvg = "0.45.1"
log = "0.4.29"
cynic = { version = "3.12.0", features = ["http-reqwest"] }
thiserror = "2.0.17"
egui-toast = "0.19.1"
serde_with = "3.16.1"
notify = "8.0.0"
regex = "1.11"
dirs = "6.0"

[build-dependencies]
cynic-codegen = "3.12.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
